# UnityOculusAndroidVRBrowser

./: .gitignore  LICENSE  README.md
AndroidViewToGLRendering-master/: build.gradle  local.properties  settings.gradle
AndroidViewToGLRendering-master/app/: build.gradle
AndroidViewToGLRendering-master/gradle/wrapper/: gradle-wrapper.properties
AndroidViewToGLRendering-master/unitylibrary/: build.gradle
AndroidViewToGLRendering-master/unitylibrary/src/main/: AndroidManifest.xml
GeckoViewPlugin/: local.properties  settings.gradle
GeckoViewPlugin/app/: CMakeLists.txt  build.gradle
GeckoViewPlugin/app/src/main/: AndroidManifest.xml
GeckoViewPlugin/app/src/main/java/com/eyeflite/ian/geckoviewplugin/: BasicActivity.java  BitmapGrabberImageView.java  BytesBuffer.java  GeckoViewPLugin.java  OVRSurfaceGeckoView.java  UnityInterface.java
GeckoViewPlugin/app/src/main/res/layout/: activity_main.xml
GeckoViewPlugin/app/src/main/res/values/: strings.xml
GeckoViewPlugin/captures/: com.eyeflite.ian.geckoviewplugin_2019.01.16_08.30.li  com.eyeflite.ian.geckoviewplugin_2019.01.16_08.36.li  com.eyeflite.ian.geckoviewplugin_2019.01.19_10.26.li  com.eyeflite.ian.geckoviewplugin_2019.01.19_11.05.li  com.eyeflite.ian.geckoviewplugin_2019.01.19_11.07.li  com.eyeflite.ian.geckoviewplugin_2019.01.19_11.09.li  com.eyeflite.ian.geckoviewplugin_2019.01.19_11.11.li  com.eyeflite.ian.geckoviewplugin_2019.02.12_11.55.li  com.eyeflite.ian.geckoviewplugin_2019.04.02_17.35.li  com.ianphilips.UnityAndroidVRBrowser_2019.01.10_14.41.li  com.ianphilips.UnityAndroidVRBrowser_2019.01.10_14.42.li  com.ianphilips.UnityAndroidVRBrowser_2019.01.10_14.44.li  com.ianphilips.UnityAndroidVRBrowser_2019.01.10_15.06.li  com.ianphilips.UnityAndroidVRBrowser_2019.01.11_09.20.li  com.ianphilips.UnityAndroidVRBrowser_2019.01.11_12.13.li  com.ianphilips.UnityAndroidVRBrowser_2019.01.19_15.12.li  com.ianphilips.UnityAndroidVRBrowser_2019.01.19_15.15.li  com.ianphilips.UnityAndroidVRBrowser_2019.01.24_14.50.li  com.ianphilips.UnityAndroidVRBrowser_2019.01.24_15.02.li
GeckoViewPlugin/classes/: build.gradle
GeckoViewPlugin/gradle/wrapper/: gradle-wrapper.properties
GeckoViewPlugin/mozillaandroid/: build.gradle
GeckoViewPlugin/mozillaandroid/src/main/: AndroidManifest.xml
UnityProject/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Oculus.Platform.Editor.csproj  Oculus.Platform.csproj  Oculus.VR.Editor.csproj  Oculus.VR.Scripts.Editor.csproj  Oculus.VR.csproj  UniRx.Async.Editor.csproj  UniRx.Async.csproj  UniRx.Examples.csproj  UniRx.csproj  Unity.XR.Oculus.Editor.csproj  UnityAndroidVRBrowser.sln  UnityProject.sln
UnityProject/Assets/: BrowserView.cs  WebScroll.cs  WebviewPanel.prefab
UnityProject/Assets/AbilitiesSpecificAssets/WindowsFiles/Prefabs/: BrowserView.cs  (+2 more)
UnityProject/Assets/Editor/: ModifyUnityAndroidAppManifestSample.cs
UnityProject/Assets/Materials/: UnderlayImpostor.mat
UnityProject/Assets/NotScripts/: GazeIcon.prefab  OculusUnlit.mat
UnityProject/Assets/Oculus/: OculusProjectConfig.asset
UnityProject/Assets/Plugin/Android/: AndroidManifest.xml  app-debug.aar  extensions-1.1.1.aar  mainTemplate.gradle.DISABLED  support-v4-28.0.0.aar
UnityProject/Assets/Plugins/Android/: unitylibrary-arm-debug.aar
UnityProject/Assets/Resources/: OculusPlatformSettings.asset
UnityProject/Assets/Scenes/: GazePointerWebviewScene.unity  GazePointerWebviewScene_01.unity  OverlayBrowserDemo.unity  SampleScene.unity  UnderlayBrowserDemo.unity
UnityProject/Assets/Scripts/: BrowserView.cs  ChangeBrowserUserAgent.cs  SwitchUserSession.cs
UnityProject/Assets/TextMesh Pro/Sprites/: sheet-01.asset  sheet-01.json  sheet-02.asset  sheet-02.json  sheet-03.asset  sheet-03.json  sheet-04-main.asset  sheet-04.json  sheet-05-with-extras.asset  sheet-05-with-extras.json
UnityProject/Assets/XR/: XRGeneralSettings.asset
UnityProject/Assets/trash/: OVRPlugin1.30.0.aar
UnityProject/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
(+243 files in other folders)
